# jipp

exa1/: cw1.cpp
lab1/: cw2.cpp  cw3.cpp  cw4.cpp  cw5.cpp
lab2/: cw1.cpp  cw2.cpp  cw3.cpp  cw4.cpp  cw5.cpp  cw6.cpp
lab3/matrix/: CMakeLists.txt
lab3/matrix/src/: main.cpp  matrix.cpp  matrix.hpp
lab5/matrix/: CMakeLists.txt
lab5/matrix/src/: main.cpp  matrix.cpp  matrix.hpp
lab5Operatory/matrix/: CMakeLists.txt
lab5Operatory/matrix/src/: main.cpp  matrix.cpp  matrix.hpp
lab6/kontenery/: CMakeLists.txt
lab6/kontenery/src/: employee.cpp  employee.h  hrms.cpp  hrms.h  main.cpp
lab8/: CMakeLists.txt  main.cpp
